[package]
name = "nhex"
version = "0.3.5"
description = "nhex"
authors = [ "you" ]
edition = "2021"

[build-dependencies]
[build-dependencies.tauri-build]
version = "1"
features = []

[dependencies]
serde_json = "1"
irc = "1.0.0"
futures = "0.3.30"
failure = "0.1.8"
chrono = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[dependencies.tauri]
version = "1"
features = [ "window-all", "path-all", "fs-all", "dialog-all", "shell-open" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
